--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.3",
+    "axios": "^0.24.0",
+    "chart.js": "^3.6.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.5.0",
+    "react-dates": "^21.8.0",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "victory": "^36.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
